# Octaskly

./: API_REFERENCE.md  CONTRIBUTOR.md  Cargo.toml  DEPLOYMENT.md  DISTRIBUTION.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FEATURES.md  IMPLEMENTATION.md  INDEX.md  PROJECT_DELIVERY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  demo.sh
.github/workflows/: release.yml
examples/: basic_usage.rs
scripts/: build-release.sh  install.bat  install.ps1  install.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/cmd/: mod.rs
src/discovery/: mod.rs
src/executor/: mod.rs
src/p2p/: mod.rs
src/persistence/: mod.rs
src/protocol/: mod.rs
src/resources/: mod.rs
src/sandbox/: mod.rs
src/scheduler/: mod.rs
src/security/: mod.rs
src/security_enhanced/: mod.rs
src/state/: mod.rs
src/transport/: mod.rs
src/transport_quic/: mod.rs
src/tui/: mod.rs
src/util/: mod.rs
tests/: integration_tests.rs
