[package]
name = "octaskly"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "octaskly"
path = "src/main.rs"

[dependencies]
# CLI & Arguments
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking - TCP
tokio-util = "0.7"
socket2 = "0.5"

# Networking - QUIC
quinn = "0.11"
rustls = { version = "0.22", features = ["ring"] }
rustls-pemfile = "2.0"

# REST API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency utilities
uuid = { version = "1.0", features = ["v4", "serde"] }

# State/File management
parking_lot = "0.12"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Authentication
jsonwebtoken = "9.2"
hmac = "0.12"
sha2 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hostname = "0.3"
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"

# Resource limits
rlimit = "0.10"
procfs = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Temporary files
tempfile = "3.8"